--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,12 @@ android {
 
 dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.github.bumptech.glide:glide:4.8.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
