--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
 }
 
 dependencies {
+    implementation ('io.socket:socket.io-client:2.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.github.bumptech.glide:glide:4.8.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
