--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         tools:targetApi="31">
         <activity
             android:name=".Chat"
-            android:exported="false" />
+            android:exported="true" >
+        </activity>
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
