--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaoTriXeMay"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".AddCar"
+            android:exported="false" />
+        <activity
+            android:name=".DetailCar"
+            android:exported="true"></activity>
+        <activity
             android:name=".Chat"
-            android:exported="true" >
-        </activity>
+            android:exported="true" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -39,14 +44,14 @@
             android:value="AIzaSyDD89pbZj8OzPvMnsmfP7eUXNPNDTExPEM" />
         <meta-data
             android:name="com.google.android.gms.version"
-            android:exported="true"></meta-data>
+            android:exported="true" />
 
         <activity
             android:name=".OTPCode"
             android:exported="false" />
         <activity
             android:name=".DangKi"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".login"
             android:exported="true">
@@ -58,8 +63,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
