--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,23 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ThemXeMoi"
+            android:exported="false" />
+        <activity
+            android:name=".LuuThongTinBaoTri"
+            android:exported="false" />
+        <activity
+            android:name=".DatLichBaoTri"
+            android:exported="true" />
+        <activity
+            android:name=".ChiTietPhieuLuu"
+            android:exported="false" />
+        <activity
             android:name=".AddCar"
             android:exported="false" />
         <activity
             android:name=".DetailCar"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Chat"
             android:exported="true" />
